Fix guest and logout button to be aligned

--- a/app/assets/stylesheets/elogix.scss
+++ b/app/assets/stylesheets/elogix.scss
@@ -17,7 +17,7 @@ button {
   padding-right: 1%;
   box-shadow: black 0 2px 5px;
   border-width: thin;
-  margin: 5px;
+  margin: 0px 5px;
 }
 
 button:hover {
